--- a/flagger-helm-chart/values.yaml
+++ b/flagger-helm-chart/values.yaml
@@ -2,6 +2,4 @@ flagger:
   crd:
     create: false
   meshProvider: "nginx"
-#  metricsServer: "http://prometheus-stack-kube-prom-prometheus.monitoring:9090"
-  prometheus:
-    install: true
+  metricsServer: "http://prometheus-stack-kube-prom-prometheus.monitoring:9090"
